--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@ body {
   * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
   }
 
   /* apply styles to <header> */
@@ -41,4 +42,27 @@ body {
       margin: 0 30 px;
       font-weight: lighter;
       font-size: 22px;
+  }
+
+  footer {
+      background: #fce138;
+      width: 100%;
+      padding: 40px 35px;
+  }
+  
+  footer h2 {
+      display: inline;
+      color: #024e76;
+      font-zise: 30px;
+      margin: 0;
+  }
+
+  footer div {
+      float: right;
+      line-height: 1.5;
+      text-align: right;
+  }
+
+  footer a {
+      color: #034e76;
   }
