Style Sheet Fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,7 @@ body {
   footer h2 {
       display: inline;
       color: #024e76;
-      font-zise: 30px;
+      font-size: 30px;
       margin: 0;
   }
 
