--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     /* more on this crazy alphanumerical value in a minute! */
     color: #39a6b2;
     font-family: Helvetica, Arial, sans-serif;
-  }
-  
-  * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
   }
 
   /* apply styles to <header> */
@@ -27,12 +27,12 @@ body {
   header a {
       text-decoration: none;
       color: #fce138;
-  }
+    }
 
   header nav {
       float: right;
       margin: 7px 0;
-  }
+}
 
   header nav ul li {
       display: inline;
@@ -76,9 +76,7 @@ body {
       background-position: center;
       position: relative;
   }
-  /* Hero Style End */
-
-  /* Hero Form Start */
+ 
   .hero-form {
       color: #024e76;
       background-color: #fce138;
@@ -99,5 +97,35 @@ body {
         right: 140px;
     }
 
+    hero-form h3 {
+        font-size: 24px;
+        margin: 0px;
+    }
 
+    hero-form p {
+        margin: 5px 0 15px 0;
+    }
 
+    .form-input {
+        border: 1px solid #024e76;
+        display: block;
+        padding: 7px 15px;
+        font-size: 16px;
+        color: #024e76;
+        width: 100%;
+        margin-bottom: 15px;
+     }
+
+     .form-label {
+         margin: 0 5px;
+     }
+
+     .form-button {
+        color: #fce138;
+        background-color: #024e76;
+        border: none;
+        padding: 10px 20px;
+        font-size: 16px;
+      }
+      /* HERO STYLES END */  
+     
