--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,3 +188,29 @@ body {
         border-color: #39a6b2;
           }
 
+    .trainers {
+        text-align: center;
+
+    }
+
+    .trainer {
+        width: 900px;
+        margin: 0 auto 30px auto;
+        background: #024e76;
+        color: #fce138;
+        overflow: auto;
+    }
+
+    .trainer img {
+        width: 35%;
+        float: left;
+    }
+
+    .trainer-bio {
+        padding: 35px;
+        float: left;
+        width: 65%;
+    }
+
+
+
