--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,33 +212,42 @@ body {
     }
     /*Reach Out Styles Start*/
     .contact {
-        background: #024e76;
         text-align: center;
-        color: #fce138; 
+        background: #024e76;
     }
 
     .contact h2 {
         color: #fce138;
     }
 
-    .address {
-        padding-bottom: 20px;
-        color:#39a6b2
-        
-    }
-
-    .contact-info iframe {
+    .contact-info iframe{
         width: 400px;
         height: 400px;
     }
 
-.contact-info div {
-    width: 410px;
-    display: inline-block;
-    vertical-align: top;
-    text-align: left;
-    margin: 30px 0 0 60px;
-    color: white;
-    }
+    .contact-info div {
+        width: 410px;
+        display: inline-block;
+        vertical-align: top;
+        text-align: left;
+        margin: 30px 0 0 60px;
+        color: white;
+      }
 
-
+      .contact-info h3 {
+        color: #fce138;
+        font-size: 32px;
+      }
+      
+      .contact-info p, .contact-info address {
+        margin: 20px 0;
+        line-height: 1.5;
+        font-size: 20px;
+        font-style: normal;
+      }
+      
+      .contact-info a {
+        color: #fce138;
+      }
+      
+      /* REACH OUT STYLES END */
