--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,19 +220,23 @@ body {
         color: #fce138;
     }
 
-    .contact-info iframe{
+    .contact-info iframe {
         width: 400px;
         height: 400px;
     }
 
     .contact-info div {
+        color: white;
         width: 410px;
         display: inline-block;
         vertical-align: top;
         text-align: left;
         margin: 30px 0 0 60px;
-        color: white;
-      }
+        }
+
+     .column-right {
+         vertical-align: center;
+        }
 
       .contact-info h3 {
         color: #fce138;
