--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,6 +223,7 @@ body {
     .contact-info iframe {
         width: 400px;
         height: 400px;
+        margin-bottom: 50px;
     }
 
     .contact-info div {
