--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,7 @@ header nav ul {
     }
 
     .hero-cta {
-        width: 35%
+        width: 35%;
         text-align: right;
         margin: 3.5%;
         color: #fff;
@@ -106,7 +106,7 @@ header nav ul {
 
     .hero-cta h2 {
         font-style: italic;
-        fint-size: 55px;
+        font-size: 55px;
         color: #fce138;
     }
 
@@ -152,10 +152,11 @@ header nav ul {
         width: 80%;
         font-size: 20px;
         margin: 0 auto;
+        text-align: center;
       }
 
     .steps {
-          text-align: center;
+        
           background: #fce138;
       }
 
@@ -187,9 +188,11 @@ header nav ul {
     .section-title {
         font-size: 55px;
         color: #024e76;
-        margin-bottom: 35px;
-        padding: 0 100px 20px 100px;
-        display: inline-block;
+        padding-bottom: 20px;
+        text-align: center;
+        margin: 0 auto 35px auto;
+        width: 50%;
+
         border-bottom: 3px solid;
           }
 
@@ -200,10 +203,6 @@ header nav ul {
     .secondary-border {
         border-color: #39a6b2;
           }
-
-    .trainers {
-        text-align: center;
-    }
 
     .trainer {
         width: 900px;
@@ -225,12 +224,14 @@ header nav ul {
     }
     /*Reach Out Styles Start*/
     .contact {
-        text-align: center;
         background: #024e76;
     }
 
     .contact h2 {
         color: #fce138;
+    }
+    .flex-row {
+        display: flex;
     }
 
     .contact-info iframe {
