--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ header nav ul {
       background-size: cover;
       background-position: center;
       
-  }
+    }
  
     .hero-form {
         border: 3px solid #024e76;
@@ -127,11 +127,11 @@ header nav ul {
         color: #024e76;
         width: 100%;
         margin-bottom: 15px;
-     }
+    }
 
     .form-label {
          margin: 0 5px;
-     }
+    }
 
     .form-button {
         color: #fce138;
@@ -139,12 +139,12 @@ header nav ul {
         border: none;
         padding: 10px 20px;
         font-size: 16px;
-      }
+    }
       /* HERO STYLES END */
       
     .intro {
           text-align: center;
-      }
+    }
 
     .intro p {
         line-height: 1.7;
@@ -153,37 +153,59 @@ header nav ul {
         font-size: 20px;
         margin: 0 auto;
         text-align: center;
-      }
+    }
 
     .steps {
-        
           background: #fce138;
-      }
-
-    .steps div {
-        margin-bottom: 80px;
     }
 
-    .steps img {
-        width: 15%;
-        margin: 10px 0;
+      .step {
+        margin: 50px auto;
+        padding-bottom: 50px;
+        width: 80%;
+        border-bottom: 1px solid #39a6b2;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-between;
     }
 
-    .steps h3 {
-        color: 024e76;
+    .step h3 {
+        color: #024e76;
         font-size: 46px;
-        margin-top: 10px;
+        flex: 1 30%;
     }
 
-    .steps p {
+    .step-info {
+        flex: 2 70%;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+
+    .step img {
+        flex: 1 12%;
+        margin-right: 20px;
+    }
+
+    .step-text {
+        flex: 12;
+    }
+    
+    .step-img img {
+        max-width: 100%;
+    }
+    .step-text p {
         color: #39a6b2;
-        font-size: 23px;
+        font-size: 18px;
     }
 
-    .steps span {
-        font-size: 38px;
+    .step-text h4 {
+        font-size: 26px;
+        line-height: 1.5;
+        color: #024e76;
     }
-     
+  
 
     .section-title {
         font-size: 55px;
@@ -192,13 +214,12 @@ header nav ul {
         text-align: center;
         margin: 0 auto 35px auto;
         width: 50%;
-
         border-bottom: 3px solid;
-          }
+    }
 
     .primary-border {
         border-color: #fce138;
-          }
+    }
           
     .secondary-border {
         border-color: #39a6b2;
