--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -234,15 +234,45 @@ header nav ul {
     }
 
     .trainer img {
-        width: 35%;
-        float: left;
+        width: 100%;
+        
     }
 
-    .trainer-bio {
-        padding: 35px;
-        float: left;
-        width: 65%;
-    }
+    .trainer {
+        margin: 20px;
+        flex: 1;
+        background: #024e76;
+        color: #fce138;
+      }
+      
+      .trainer-bio {
+        padding: 25px;
+        line-height: 1.3;
+      }
+      
+      .trainer-bio h3 {
+        font-size: 28px;
+       
+      }
+      
+      .trainer-bio h4 {
+        font-weight: lighter;
+        font-size: 22px;
+        margin-bottom: 15px;
+      }
+      
+      .trainer-bio p {
+        font-size: 17px;
+      }
+
+      .trainers {
+        width: 100%;
+        margin: 0 auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+      }
+
     /*Reach Out Styles Start*/
     .contact {
         background: #024e76;
