--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,11 @@
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    
 }
 
 body {
-    /* more on this crazy alphanumerical value in a minute! */
     color: #39a6b2;
     font-family: Helvetica, Arial, sans-serif;
   }
@@ -286,18 +286,20 @@ header nav ul {
     }
 
     .contact-info iframe {
-        width: 400px;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
         height: 400px;
         margin-bottom: 50px;
     }
 
+    .contact-info > * {
+        flex: 1;
+        margin: 15px;
+      }
+
     .contact-info div {
         color: white;
-        width: 410px;
-        display: inline-block;
-        vertical-align: top;
-        text-align: left;
-        margin: 30px 0 0 60px;
         }
 
      .column-right {
@@ -312,8 +314,28 @@ header nav ul {
       .contact-info p, .contact-info address {
         margin: 20px 0;
         line-height: 1.5;
-        font-size: 20px;
+        font-size: 16px;
         font-style: normal;
+      }
+
+      .contact-form input, .contact-form textarea {
+          border: 1px solid #024e76;
+          display: block;
+          padding: 7px 15px;
+          color: #024e76;
+          width: 100%;
+          margin-bottom: 15px;
+          margin-top: 5px;
+      }
+
+      .contact-form button {
+          width: 100%;
+          border: none;
+          background: #fce138;
+          color: #024e76;
+          text-align: center;
+          padding: 15px 0;
+          font-size: 16px;
       }
       
       .contact-info a {
