fixed git-img class in CSS to show images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,7 +188,7 @@ header nav li {
         align-items: center;
     }
 
-    .step img {
+    .step-img {
         flex: 1 12%;
         margin-right: 20px;
     }
