--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,7 @@
 * {
     box-sizing: border-box;
     margin: 0;
-    padding: 0;
-    
+    padding: 0; 
 }
 
 body {
@@ -17,6 +16,14 @@ body {
       flex-wrap: wrap;
       padding: 20px 35px;
       background-color: #39a6b2;
+      position: -webkit-sticky;
+      position: sticky;
+    top: 0;
+    background-image: url("https://static.fullstack-bootcamp.com/module-1/hero-bg.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+background-position: 80%;
   }
 
   header h1 {
@@ -24,6 +31,7 @@ body {
       font-size: 36px;
       color: fce138;
       margin: 0;
+      text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
       
   }
 
@@ -42,6 +50,7 @@ header nav ul {
     justify-content: space-between;
     align-items: center;
     list-style: none;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 header nav li {
@@ -89,6 +98,8 @@ header nav li {
       background-size: cover;
       background-position: center;
       align-items:flex-start;
+      background-attachment: fixed;
+    background-position: 80%;
       
     }
  
@@ -99,6 +110,9 @@ header nav li {
         width: 40%;
         margin: 3.5%;
         color: #024e76;
+        box-shadow: 0 0 10px rgba(252, 225, 56, 0.8);
+        background: rgba(252, 225, 56, 0.8);
+        border-radius: 15px;
     }
 
     .hero-cta {
@@ -110,10 +124,15 @@ header nav li {
         line-height: 1.2;
     }
 
+    .hero-form button:hover {
+        background-color: #39a6b2;  
+      }
+
     .hero-cta h2 {
         font-style: italic;
         font-size: 55px;
         color: #fce138;
+        text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     }
 
     hero-form h3 {
@@ -133,6 +152,7 @@ header nav li {
         color: #024e76;
         width: 100%;
         margin-bottom: 15px;
+        border-radius: 10px;
     }
 
     .form-label {
@@ -145,6 +165,7 @@ header nav li {
         border: none;
         padding: 10px 20px;
         font-size: 16px;
+        border-radius: 10px;
     }
       /* HERO STYLES END */
 
@@ -335,9 +356,10 @@ header nav li {
           width: 100%;
           margin-bottom: 15px;
           margin-top: 5px;
+          border-radius: 10px;
       }
 
-      .contact-form button {
+      .contact-form button:hover {
           width: 100%;
           border: none;
           background: #fce138;
@@ -345,6 +367,12 @@ header nav li {
           text-align: center;
           padding: 15px 0;
           font-size: 16px;
+          border-radius: 10px;
+      }
+
+      .contact-form input:focus, .contact-form textarea:focus {
+        background-color: rgba(255,255,255, 0.75);
+        outline: none;
       }
       
       .contact-info a {
@@ -356,6 +384,11 @@ header nav li {
           justify-content: space-between;
           flex-wrap: wrap;
       }
+
+      .form-input:focus {
+        background-color: rgba(255,255,255, 0.75);
+        outline: none;
+      }
       
       /* REACH OUT STYLES END */
 
@@ -364,20 +397,23 @@ header nav li {
       header {
           padding-bottom: 0;
           justify-content: center;
+          position: relative
       }
 
       header h1 {
           width: 100%;
           text-align: center;
+          
       }
 
       header nav ul {
           margin-top: 20px;
           width: 100%;
           justify-content: center;
+          text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
       }
 
-      header nav ul li a {
+      header nav ul li a:hover {
           font-size: 20px;
       }
 
@@ -390,8 +426,9 @@ header nav li {
           width: 100%;
       }
     
-      .hero-cta {
+      .hero-cta h2 {
           text-align: center;
+          text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
       }
 
       .section-title {
@@ -434,7 +471,15 @@ header nav li {
       .step-text {
           flex: 100%;
       }
-  }
+      .step {
+        /* re-add alongside existing declarations */
+        border-bottom: 1px solid #39a6b2;
+      }
+      
+      .step:last-child {
+        border-bottom: none;
+      }
+    }
   
   /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
   @media screen and (max-width: 575px) {
@@ -463,7 +508,6 @@ header nav li {
       }
 
       .contact-form {
-          order: 3;
+        order: 3;
       }
-    
-  }
+    }
